Перевёл проект на quarkus