@@ -1,48 +1,42 @@
 package ru.courseproject.analiticsimulator.task.task.service;
 
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.transaction.Transactional;
 import ru.courseproject.analiticsimulator.dto.SubmissionResult;
 import ru.courseproject.analiticsimulator.dto.TaskDto;
-import ru.courseproject.analiticsimulator.user.pogress.service.UserProgressService;
 import ru.courseproject.analiticsimulator.task.task.model.Task;
 import ru.courseproject.analiticsimulator.task.task.repository.TaskRepository;
+import ru.courseproject.analiticsimulator.user.pogress.service.UserProgressService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Service
-@RequiredArgsConstructor
-@Transactional(readOnly = true)
+@ApplicationScoped
 public class TaskService {
 
     private final TaskRepository taskRepository;
     private final UserProgressService userProgressService;
 
+    public TaskService(TaskRepository taskRepository, UserProgressService userProgressService) {
+        this.taskRepository = taskRepository;
+        this.userProgressService = userProgressService;
+    }
+
     public List<TaskDto> getAllTasks() {
         return taskRepository.findAllWithTopic().stream()
                 .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Task getTaskById(Long taskId) {
-        return taskRepository.findById(taskId)
-                .orElseThrow(() -> new RuntimeException("Задание не найдено: " + taskId));
+        return taskRepository.findByIdOptional(taskId)
+                .orElseThrow(() -> new RuntimeException("Task not found: " + taskId));
     }
 
     @Transactional
     public SubmissionResult submitAnswer(String userEmail, Long taskId, String answer) {
         Task task = getTaskById(taskId);
         UserProgressService.UserSubmissionResult result = userProgressService.saveProgress(userEmail, task, answer);
-
-        // ✅ Возвращаем DTO из пакета dto
-        return new SubmissionResult(
-                result.correct(),
-                result.score(),
-                result.message(),
-                result.alreadyCompleted()
-        );
+        return new SubmissionResult(result.correct(), result.score(), result.message(), result.alreadyCompleted());
     }
 
     private TaskDto mapToDto(Task task) {
